data/derived/sp14/progs/unify/prog2268.ml.out
Characters 30-40:
  let fixpoint (f,b) = wwhile ( (f b) <> b,b);;
                                ^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
